# Universal-Database-Comparison-Tool

./: .gitignore  CMakeLists.txt
apps/: cli_main.cpp
include/: BackendRegistry.h  ComparisonRunner.h  DatabaseComperator.h  DatabaseDiffReport.h  DatabaseSchemaBuilder.h  DatabaseSchemaInfoTypes.h  IDatabaseConnection.h  IRowReader.h  ISchemaInspector.h  SchemaComperator.h  TableComperator.h  TableReadSpec.h  TableStructureComperator.h  dbdiff.h
include/dbdiff/: ComparisonRunner.h  ConnectionConfig.h  TableStructureComperator.h  dbdiff.h
include/sqlite/: SqliteBackend.h  SqliteBackendFactory.h  SqliteRowReader.h  SqliteSchemaInspector.h
include/sqlserver/: OdbcDiagnostics.h  SqlServerBackendFactory.h  SqlServerRuntimeError.h  SqlServerSchemaInspector.h
include/util/: Sqlutil.h
src/: BackendRegistry.cpp  BackendRegistry.h  ComparisonRunner.cpp  DatabaseComperator.cpp  DatabaseComperator.h  DatabaseSchemaBuilder.cpp  DatabaseSchemaBuilder.h  ISchemaInspector.h  SchemaComperator.cpp  TableComperator.cpp  TableComperator.h  TableStructureComperator.cpp  dbdiff.cpp
src/sqlite/: SqliteBackend.cpp  SqliteBackendFactory.cpp  SqliteConnection.cpp  SqliteConnection.h  SqliteRowReader.cpp  SqliteSchemaInspector.cpp  SqliteSchemaInspector.h
src/sqlserver/: OdbcDiagnostics.cpp  SqlServerBackend.cpp  SqlServerBackend.h  SqlServerBackendFactory.cpp  SqlServerConnection.cpp  SqlServerConnection.h  SqlServerRowReader.cpp  SqlServerRowReader.h  SqlServerRuntimeError.cpp  SqlServerSchemaInspector.cpp  SqlServerSchemaInspector.h
src/util/: Sqlutil.cpp
